[package]
name = "decloneify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15.0"
